adding some img background

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <section id="contact">
         <h2>Get in Touch</h2>
         <div class="contact-icons">
-            <a href="9384735572" title="Phone"><i class="fas fa-phone-alt"></i></a>
+            <a href="tel:+your-phone-number" title="Phone"><i class="fas fa-phone-alt"></i></a>
             <a href="mailto:your-email@example.com" title="Email"><i class="fas fa-envelope"></i></a>
             <a href="https://github.com/your-github" title="GitHub"><i class="fab fa-github"></i></a>
             <a href="https://instagram.com/your-instagram" title="Instagram"><i class="fab fa-instagram"></i></a>
