--- a/index.html
+++ b/index.html
@@ -1,101 +1,242 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A professional portfolio for Jegan Vijay J. showcasing projects, skills, and contact information.">
-    <title>Jegan Vijay J. | Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Jegan Vijay J.'s creative web portfolio with modern design and interactive features.">
+  <title>Jegan Vijay J. | Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    /* Global Styles */
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    h1, h2, h3 {
+      font-family: 'Caveat', cursive;
+    }
+    header {
+      text-align: center;
+      background: linear-gradient(to bottom right, #ff4b5c, #4bcaff);
+      color: white;
+      padding: 50px 20px;
+      position: relative;
+    }
+    header h1 {
+      font-size: 3rem;
+      margin: 0;
+    }
+    #dynamic-text {
+      color: #ffe066;
+      font-weight: bold;
+    }
+    header nav ul {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
+    header nav a {
+      text-decoration: none;
+      padding: 10px 20px;
+      border: 2px solid white;
+      border-radius: 25px;
+      color: white;
+      transition: background 0.3s ease;
+    }
+    header nav a:hover {
+      background: white;
+      color: #4bcaff;
+    }
+    .profile-img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      border: 4px solid white;
+      margin: 20px auto;
+    }
+
+    /* About Section */
+    #about {
+      text-align: center;
+      padding: 50px 20px;
+      background: #e3f2fd;
+    }
+    #about p {
+      font-size: 1.2rem;
+      line-height: 1.8;
+    }
+
+    /* Skills Section */
+    #skills {
+      padding: 50px 20px;
+      background: #fff4e6;
+    }
+    .skill {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 20px;
+      align-items: center;
+    }
+    .skill-name {
+      font-weight: bold;
+    }
+    .skill-bar {
+      width: 70%;
+      background: #ddd;
+      border-radius: 25px;
+      overflow: hidden;
+      margin-left: 20px;
+    }
+    .skill-bar span {
+      display: block;
+      height: 20px;
+      background: linear-gradient(to right, #ff4b5c, #4bcaff);
+      animation: grow 2s ease-in-out;
+    }
+
+    /* Projects Section */
+    #projects {
+      text-align: center;
+      padding: 50px 20px;
+      background: #f9f9f9;
+    }
+    .project-card {
+      border: 1px solid #ddd;
+      padding: 20px;
+      margin: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+    .project-card h3 {
+      margin: 0 0 10px;
+    }
+
+    /* Contact Section */
+    #contact {
+      padding: 50px 20px;
+      background: #ffe066;
+      text-align: center;
+    }
+    #contact form {
+      display: inline-block;
+      max-width: 400px;
+      width: 100%;
+    }
+    #contact form input,
+    #contact form textarea,
+    #contact form button {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 5px;
+    }
+    #contact form button {
+      background: #4bcaff;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #333;
+      color: #ccc;
+    }
+
+    /* Dynamic Progress Bar Animation */
+    @keyframes grow {
+      from { width: 0; }
+      to { width: var(--skill-level); }
+    }
+
+    /* Dark Mode */
+    .dark-mode {
+      background-color: #333;
+      color: #f9f9f9;
+    }
+  </style>
 </head>
 <body>
-    <header class="hero-section">
-        <nav class="navbar">
-            <h1 class="logo">Jegan Vijay J.</h1>
-            <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-        <div class="hero-content">
-            <div class="profile-container">
-                <img src="vijay.jpg" alt="Jegan Vijay J." class="profile-img">
-            </div>
-            <h2>Hello, I'm Jegan Vijay J.</h2>
-            <p>A creative web developer turning ideas into reality with modern design and clean code.</p>
-            <a href="#projects" class="cta">View My Work</a>
-        </div>
-    </header>
+  <header>
+    <h1>Jegan Vijay J.</h1>
+    <h3>Hello, I'm a <span id="dynamic-text">Web Developer</span></h3>
+    <img src="vijay.jpg" alt="Profile Image" class="profile-img">
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <section id="about" class="section-with-background">
-        <h2>About Me</h2>
-        <p>
-            I am a passionate web developer with expertise in building dynamic and responsive websites. 
-            My goal is to create digital experiences that are efficient, engaging, and innovative.
-        </p>
-    </section>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      I'm Jegan Vijay J., a passionate web developer blending creativity with technical expertise to deliver stunning digital experiences.
+    </p>
+  </section>
 
-    <section id="projects" class="section-with-background">
-        <h2>My Projects</h2>
-        <div class="projects-container">
-            <div class="project">
-                <h3>Portfolio Website</h3>
-                <p>A sleek and modern portfolio showcasing my skills and work.</p>
-            </div>
-            <div class="project">
-                <h3>Weather App</h3>
-                <p>A weather forecast app built with JavaScript and APIs.</p>
-            </div>
-            <div class="project">
-                <h3>E-Commerce Website</h3>
-                <p>A responsive e-commerce site with dynamic product listings.</p>
-            </div>
-        </div>
-    </section>
+  <section id="skills">
+    <h2>Skills</h2>
+    <div class="skill">
+      <span class="skill-name">HTML</span>
+      <div class="skill-bar"><span style="--skill-level: 90%;"></span></div>
+    </div>
+    <div class="skill">
+      <span class="skill-name">CSS</span>
+      <div class="skill-bar"><span style="--skill-level: 85%;"></span></div>
+    </div>
+    <div class="skill">
+      <span class="skill-name">JavaScript</span>
+      <div class="skill-bar"><span style="--skill-level: 75%;"></span></div>
+    </div>
+  </section>
 
-    <section id="skills" class="section-with-background">
-        <h2>Skills</h2>
-        <div class="skills-container">
-            <div class="skill">
-                <p>HTML</p>
-                <div class="skill-bar">
-                    <span class="html-bar" style="width: 60%;">60%</span>
-                </div>
-            </div>
-            <div class="skill">
-                <p>CSS</p>
-                <div class="skill-bar">
-                    <span class="css-bar" style="width: 70%;">70%</span>
-                </div>
-            </div>
-            <div class="skill">
-                <p>JavaScript</p>
-                <div class="skill-bar">
-                    <span class="js-bar" style="width: 50%;">50%</span>
-                </div>
-            </div>
-        </div>
-    </section>
+  <section id="projects">
+    <h2>My Projects</h2>
+    <div class="project-card">
+      <h3>Portfolio Website</h3>
+      <p>A responsive portfolio built with HTML, CSS, and JavaScript.</p>
+    </div>
+    <div class="project-card">
+      <h3>Todo App</h3>
+      <p>An interactive todo application built with React.</p>
+    </div>
+  </section>
 
-    <section id="contact" class="section-with-background">
-        <h2>Contact Me</h2>
-        <form action="#" method="post">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
-            <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
-    </section>
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <form action="https://script.google.com/macros/s/AKfycbwwog88-1eCLh2vNSz7c2VleV3SyiuQXvBR-8T6dm_C3qHNbwe7EYprPSNAjmBQIe78/exec" method="post">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" placeholder="Your Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </section>
 
-    <footer>
-        <div class="social-links">
-            <a href="#">LinkedIn</a>
-            <a href="#">GitHub</a>
-            <a href="#">Twitter</a>
-        </div>
-        <p>Designed & Built by Jegan Vijay J. | © 2025</p>
-    </footer>
+  <footer>
+    <p>© 2025 Jegan Vijay J. | Designed with ❤️</p>
+  </footer>
+
+  <script>
+    const texts = ["Web Developer", "Creative Coder", "Problem Solver"];
+    let i = 0;
+    const dynamicText = document.getElementById("dynamic-text");
+    setInterval(() => {
+      dynamicText.textContent = texts[i];
+      i = (i + 1) % texts.length;
+    }, 2000);
+  </script>
 </body>
+</html>
 </html>
